added getArtist function

--- a/views/index.html
+++ b/views/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>NodeApi</title>
+    <link rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Hello Олежка!</h1>
+    <h1 class='loading'>Loading...</h1>
+    <div class="card-deck"></div>
     <script src='/js/index.js'></script>
 </body>
 </html>
