--- a/views/form.html
+++ b/views/form.html
@@ -10,13 +10,12 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <form action="/api/artists" method="POST" class="card" enctype="multipart/form-data">
+  <form action="/api/artists" method="POST" enctype="multipart/form-data">
     <label>name</label>
     <input type="text" name="name">
     <label>photo</label>
     <input type="file" id="photo" name="photo" accept="image/gif, image/png, image/jpeg">
     <input type="submit" value="submit">
   </form>
-  <img src="/uploads/7b4e4a66-24bf-4b05-837b-fd138a78a5e6.jpeg" alt="test photo">
 </body>
 </html>
