--- a/views/form.html
+++ b/views/form.html
@@ -7,15 +7,22 @@
   <title>Document</title>
   <link rel="stylesheet" 
   href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <form action="/api/artists" method="POST" enctype="multipart/form-data">
-    <label>name</label>
+  <h2>Add artist</h2>
+  <form name="addArtist" action="/api/artists" method="POST" enctype="multipart/form-data">
+    <label>Name</label>
     <input type="text" name="name">
+    <br>
+    <label>Description</label>
+    <input type="text" name="description">
+    <br>
     <label>photo</label>
     <input type="file" id="photo" name="photo" accept="image/gif, image/png, image/jpeg">
+    <br>
     <input type="submit" value="submit">
   </form>
+  <script src="js/add-artist.js"></script>
 </body>
 </html>
