- add posibility to upload several photos

--- a/views/form.html
+++ b/views/form.html
@@ -21,6 +21,9 @@
     <label>photo</label>
     <input type="file" id="photo" name="photo" accept="image/gif, image/png, image/jpeg">
     <br>
+    <label>avatar</label>
+    <input type="file"  name="avatar" accept="image/gif, image/png, image/jpeg">
+    <br>
     <input type="submit" value="submit">
   </form>
   <script src="js/add-artist.js"></script>
